@@ -1,0 +1,49 @@
+COMPILING and INSTALLING UNDER MINGW
+------------------------------------------------------------------------
+please direct any comment or suggestion to Juergen (juergenhaas@gmx.net)
+------------------------------------------------------------------------
+
+
+From gerbv version 0.17 onwards it is possible to compile gerbv under WIN32 
+ (tested on WINDOWS 2000) using GTK2/GLIB2 libraries).
+
+You will need to download the following files:
+
+        -from www.mingw.org (files are distributed from
+  http://sourceforge.net/projects/mingw/; click on files and
+         get the current release)
+         Install these, using your favourite unzipper, if they are not a
+         self-extracting archive. You should now have the \msys and also \mingw
+         directory trees.
+         Activating start->programs->mingw->msys->msys opens a terminal
+         window, where you can enter *n*x-like commands (e.g. ls to see the
+         content of your home directory, which should be your default location)
+  
+        -from http://www.gimp.org/~tml/gimp/win32/downloads.html  get the win32 version of
+  GTK2 (GTK1 will not work)
+         Here is a filelist I have downloaded, in principle everything which
+         is not labelled "crucial ONLY for compiling gimp" should be included:
+          (all of these are zipped archives, so beware where you put them, they
+          should end up in the MINGW path, you can recognise the top direc-
+          tories listed in the archive in the mingw tree)
+   
+list of archives to be downloaded for gtk2:  
+
+glib-2.4.5.zip. Runtime of GLib 2.4.5. Requires libiconv and gettext-runtime.
+glib-dev-2.4.5.zip. Corresponding developer package, i.e. headers, import libraries and documentation.
+pkgconfig-0.15.zip. Pkg-config is a neat program that is useful in makefiles etc. It manages compile and link flags. Requires GLib 2.x.
+GNU libiconv for Win32. Both runtime and developer files. GNU Libiconv is an implementation of iconv. GLib uses libiconv, so you will need this.
+gettext-runtime-0.13.1.zip. GNU gettext runtime for Win32, containing the GNU internationalisation library (libintl) and support files. GLib uses libintl, so you will need this.
+gettext-tools-0.13.1.zip. GNU gettext tools for Win32, containing the msgfmt and other programs. Msgfmt is needed if you want to recompile message catalogs. The other commands can be used to manipulate message catalogs in other ways.
+dirent.zip. The public domain <dirent.h> implementation from mingw, separately packaged for MSVC users. Not directly related to GLib, but needed to build GLib with MSVC.
+gtk+-2.4.7.zip. Runtime of GTK+ 2.4.7. Requires glib, atk, pango, zlib, libpng, libjpeg and libtiff.
+gtk+-dev-2.4.7.zip. Corresponding developer package.
+pango-1.4.1.zip. Pango 1.4.1. Pango is used by GTK+ 2 and GIMP 2.
+pango-dev-1.4.1.zip. Corresponding developer package.
+atk-1.6.0.zip. Atk is used by GTK+ 2.
+atk-dev-1.6.0.zip. Corresponding developer package.
+libpng 1.2.5, providing libpng12.dll. libjpeg 6b-3, providing jpeg62.dll. libtiff 3.6.1, providing libtiff3.dll. FreeType2 2.1.7, providing freetype6.dll. These are ported and packaged for Windows by the GnuWin32 project. These are used both by GIMP's corresponding plug-ins, and by GTK+ 2. The "bin" packages are the runtime ones, the "lib" packages are the ones needed by developers.
+Zlib 1.2.1, official Windows DLL distribution. Put the zlib1.dll in top\bin folder. Zlib is used by at least libpng and libtiff.
+fontconfig-dev-2.2.2-20040412.zip. Corresponding developer package (Import library, headers, documentation).
+Fontconfig uses the expat library. Download expat.zip and put the xmlparse.dll somewhere in your PATH.
+
